# ai-discord

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  ocmonitor-wrapper.sh  pyproject.toml  test_debug.py
.opencode/tool/: math.ts
docs/plans/: 2026-01-11-discord-bot-design.md  2026-01-11-discord-bot-implementation.md
src/discord_ai/: bot.py  discord_client.py  logging_config.py  main.py  models.py  settings.py
src/discord_ai/claude/: __init__.py  client.py  formatter.py  parser.py
src/discord_ai/handlers/: channels.py  messages.py  ready.py
src/discord_ai/utils/: typing.py
tests/helpers/data/: claude_responses.py
tests/integration/: test_claude_client.py  test_end_to_end.py
tests/unit/: test_bot.py  test_discord_client.py  test_logging_config.py  test_models.py  test_settings.py
tests/unit/claude/: __init__.py  test_client.py  test_formatter.py  test_parser.py
tests/unit/handlers/: test_messages.py
tests/unit/utils/: test_typing.py
